--- a/app/views/index.html
+++ b/app/views/index.html
@@ -17,15 +17,16 @@ Reserve funding prototype
         <ul class="govuk-list govuk-list--bullet">
           <li style="margin-bottom: 0px" class="govuk-!-font-weight-bold">Changes:
             <ul class="govuk-list govuk-list--bullet">
-              <li style="margin-bottom: 0px">Provider: 
+              <!-- <li style="margin-bottom: 0px">Provider: 
                 <ul class="govuk-list govuk-list--bullet">
                     <li style="margin-bottom: 0px"></li>
                 </ul>
+              </li> -->
               <li style="margin-bottom: 0px">Employer:
                 <ul class="govuk-list govuk-list--bullet">
                     <li style="margin-bottom: 0px">Check answers page: reordered rows, hid org row if 1</li>
                     <li style="margin-bottom: 0px">Confirmation page: reordered rows, hid org row if 1</li>
-                    <li style="margin-bottom: 0px">Add provider pages: 4 new pages</li>
+                    <li style="margin-bottom: 0px">Assign provider to reservation: see trello <a href="https://trello.com/c/2olNeEjU" target="_blank" class="govuk-link govuk-link--no-visited-state">card #149</a></li>
                 </ul>
               </li>
             </ul>
@@ -40,6 +41,7 @@ Reserve funding prototype
                 <ul class="govuk-list govuk-list--bullet">
                     <li style="margin-bottom: 0px">Manage page: search, pagination and filters, table layout, ordering, misc content changes (incl. 0 reservations view)</li>
                 </ul>
+              </li>
               <li style="margin-bottom: 0px">Employer:
                 <ul class="govuk-list govuk-list--bullet">
                     <li style="margin-bottom: 0px">Choose course page: yes/no choice</li>
