--- a/app/views/16-0/reserve-confirmation.html
+++ b/app/views/16-0/reserve-confirmation.html
@@ -91,6 +91,19 @@
                     {% endfor %}
                 </dd>
             </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    [Provider]
+                </dt>
+                <dd class="govuk-summary-list__value">
+                    {% if myData.addProvider == true %}
+                        {{myData.selectedProvider.name}}<br>
+                        {{myData.selectedProvider.id}}
+                    {% else %}
+                        [Not added]
+                    {% endif %}
+                </dd>
+            </div>
         </dl>
 
         <h2 class="govuk-heading-l">Making changes</h2>
