--- a/app/views/16-0/reserve-reservations.html
+++ b/app/views/16-0/reserve-reservations.html
@@ -66,7 +66,7 @@
                   {% endif %}
                   <th scope="col" class="govuk-table__header">Apprenticeship training</th>
                   <th scope="col" class="govuk-table__header">Apprenticeship start date</th>
-                  <th scope="col" class="govuk-table__header">Provider</th>
+                  <th scope="col" class="govuk-table__header">[Provider]</th>
                   <th scope="col" class="govuk-table__header"></th>
                   <th scope="col" class="govuk-table__header"></th>
                 </tr>
