--- a/app/views/16-0/setup.html
+++ b/app/views/16-0/setup.html
@@ -267,9 +267,14 @@
                     <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="provider-home">/provider-home</a></td>
                 </tr> 
                 <tr class="govuk-table__row">
-                    <th class="govuk-table__cell">Manage reservations</th>
+                    <th class="govuk-table__cell">Manage reservations list</th>
                     <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-reservations?t=emp">/reserve-reservations?t=emp</a></td>
                     <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-reservations-pro">/reserve-reservations-pro</a></td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">Manage reservation</th>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-manage-reservation">/reserve-manage-reservation</a></td>
+                    <td class="govuk-table__cell" style="color:grey">n/a</td>
                 </tr>
                 <tr class="govuk-table__row">
                     <th class="govuk-table__cell">Start</th>
