--- a/app/views/16-0/setup.html
+++ b/app/views/16-0/setup.html
@@ -297,9 +297,19 @@
                     <td class="govuk-table__cell" style="color:grey">n/a</td>
                 </tr>
                 <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">Dropout - dont know course</th>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-dropout?do=course">/reserve-dropout?do=course</a></td>
+                    <td class="govuk-table__cell" style="color:grey">n/a</td>
+                </tr>
+                <tr class="govuk-table__row">
                     <th class="govuk-table__cell">Choose start date</th>
                     <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-choose-start-date?t=emp">/reserve-choose-start-date?t=emp</a></td>
                     <td class="govuk-table__cell"  style="color:grey">n/a</td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">Dropout - dont know date</th>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-dropout?do=date">/reserve-dropout?do=date</a></td>
+                    <td class="govuk-table__cell" style="color:grey">n/a</td>
                 </tr>
                 <tr class="govuk-table__row">
                     <th class="govuk-table__cell">Choose course & start date</th>
