16-0 revert row order

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -24,9 +24,9 @@ Reserve funding prototype
               </li> -->
               <li style="margin-bottom: 0px">Employer:
                 <ul class="govuk-list govuk-list--bullet">
-                    <li style="margin-bottom: 0px">Check answers page: reordered rows, hid org row if 1</li>
-                    <li style="margin-bottom: 0px">Confirmation page: reordered rows, hid org row if 1</li>
-                    <li style="margin-bottom: 0px">Assign provider to reservation: see trello <a href="https://trello.com/c/2olNeEjU" target="_blank" class="govuk-link govuk-link--no-visited-state">card #149</a></li>
+                    <li style="margin-bottom: 0px">Hiding org rows if 1 org  <a href="https://trello.com/c/l2losURX" target="_blank" class="govuk-link govuk-link--no-visited-state">card #152</a></li>
+                    <li style="margin-bottom: 0px">Assign provider to reservation <a href="https://trello.com/c/2olNeEjU" target="_blank" class="govuk-link govuk-link--no-visited-state">card #149</a></li>
+                    <li style="margin-bottom: 0px">Start date: I don't know option incl. dropout <a href="https://trello.com/c/7brJTKdL" target="_blank" class="govuk-link govuk-link--no-visited-state">card #144</a></li>
                 </ul>
               </li>
             </ul>
@@ -39,7 +39,8 @@ Reserve funding prototype
             <ul class="govuk-list govuk-list--bullet">
               <li style="margin-bottom: 0px">Provider: 
                 <ul class="govuk-list govuk-list--bullet">
-                    <li style="margin-bottom: 0px">Manage page: search, pagination and filters, table layout, ordering, misc content changes (incl. 0 reservations view)</li>
+                    <li style="margin-bottom: 0px">Manage page: search, pagination and filters <a href="https://trello.com/c/9dnOLy9f" target="_blank" class="govuk-link govuk-link--no-visited-state">card #148</a></li> 
+                    <li style="margin-bottom: 0px">Manage page: table layout, ordering, misc content changes (incl. 0 reservations view)</li>
                 </ul>
               </li>
               <li style="margin-bottom: 0px">Employer:
@@ -47,7 +48,8 @@ Reserve funding prototype
                     <li style="margin-bottom: 0px">Choose course page: yes/no choice</li>
                     <li style="margin-bottom: 0px">Choose org page: skip page if 1</li>
                     <li style="margin-bottom: 0px">Dropout - dont know course page: new page</li>
-                    <li style="margin-bottom: 0px">Manage page: table layout, ordering, hide org column if 1</li>
+                    <li style="margin-bottom: 0px">Hiding org column if 1 org  <a href="https://trello.com/c/l2losURX" target="_blank" class="govuk-link govuk-link--no-visited-state">card #152</a></li>
+                    <li style="margin-bottom: 0px">Manage page: table layout, ordering</li>
                 </ul>
               </li>
             </ul>
