--- a/app/views/16-0/reserve-delete-provider.html
+++ b/app/views/16-0/reserve-delete-provider.html
@@ -48,13 +48,17 @@
         </div>
         {% endif %}
 
+        <h1 class="govuk-heading-xl">
+            Remove {{_reservation.provider}} from this reservation?
+        </h1>
+
         <form method="POST">
 
-            <div class="govuk-form-group {% if myData.validationErrors.deleteAnswer %}govuk-form-group--error{% endif %}">
+            <!-- <div class="govuk-form-group {% if myData.validationErrors.deleteAnswer %}govuk-form-group--error{% endif %}">
                 <fieldset class="govuk-fieldset" aria-describedby="radio-hint">
                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
                         <h1 class="govuk-fieldset__heading">
-                            [Delete '{{_reservation.provider}}' from this reservation?]
+                            Remove ‘{{_reservation.provider}}’ from this reservation?
                         </h1>
                     </legend>
                     {% if myData.validationErrors.deleteAnswer %}
@@ -78,12 +82,12 @@
                         </div>
                     </div>
                 </fieldset>
-            </div>
+            </div> -->
 
             <!-- Button -->
             {% from "govuk/components/button/macro.njk" import govukButton %}
             {{ govukButton({
-              text: "[Delete]"
+              text: "Confirm and continue"
             }) }}
 
         </form>
