--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,47 +13,22 @@ Reserve funding prototype
     </h1>
 
     <ul class="govuk-list govuk-list--bullet govuk-body-l">
-      <li style="margin-bottom:20px"><a href="/16-0/setup" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">Version 16</a> <span style="color:darkorange">(in progress)</span> 
+      <li style="margin-bottom:20px"><a href="/16-0/setup" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">Version 16</a>
         <ul class="govuk-list govuk-list--bullet">
-          <li style="margin-bottom: 0px" class="govuk-!-font-weight-bold">Changes:
-            <ul class="govuk-list govuk-list--bullet">
-              <!-- <li style="margin-bottom: 0px">Provider: 
-                <ul class="govuk-list govuk-list--bullet">
-                    <li style="margin-bottom: 0px"></li>
-                </ul>
-              </li> -->
-              <li style="margin-bottom: 0px">Employer:
-                <ul class="govuk-list govuk-list--bullet">
-                    <li style="margin-bottom: 0px">Hiding org rows if 1 org  <a href="https://trello.com/c/l2losURX" target="_blank" class="govuk-link govuk-link--no-visited-state">card #152</a></li>
-                    <li style="margin-bottom: 0px">Assign provider to reservation <a href="https://trello.com/c/2olNeEjU" target="_blank" class="govuk-link govuk-link--no-visited-state">card #149</a></li>
-                    <li style="margin-bottom: 0px">Start date: I don't know option incl. dropout <a href="https://trello.com/c/7brJTKdL" target="_blank" class="govuk-link govuk-link--no-visited-state">card #144</a></li>
-                </ul>
-              </li>
-            </ul>
-          </li>
+          <li style="margin-bottom: 0px">Hiding org rows if 1 org  <a href="https://trello.com/c/l2losURX" target="_blank" class="govuk-link govuk-link--no-visited-state">card #152</a></li>
+          <li style="margin-bottom: 0px">Start date: I don't know option incl. dropout <a href="https://trello.com/c/7brJTKdL" target="_blank" class="govuk-link govuk-link--no-visited-state">card #144</a></li>
+          <li style="margin-bottom: 0px">Assign provider to reservation <a href="https://trello.com/c/2olNeEjU" target="_blank" class="govuk-link govuk-link--no-visited-state">card #149</a> <span class="govuk-!-font-weight-bold" style="color:rgb(255, 111, 0)">(in progress)</span> </li>
         </ul>
       </li>
       <li style="margin-bottom:20px"><a href="/15-0/setup" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">Version 15</a>
         <ul class="govuk-list govuk-list--bullet">
-          <li style="margin-bottom: 0px" class="govuk-!-font-weight-bold">Changes:
-            <ul class="govuk-list govuk-list--bullet">
-              <li style="margin-bottom: 0px">Provider: 
-                <ul class="govuk-list govuk-list--bullet">
-                    <li style="margin-bottom: 0px">Manage page: search, pagination and filters <a href="https://trello.com/c/9dnOLy9f" target="_blank" class="govuk-link govuk-link--no-visited-state">card #148</a></li> 
-                    <li style="margin-bottom: 0px">Manage page: table layout, ordering, misc content changes (incl. 0 reservations view)</li>
-                </ul>
-              </li>
-              <li style="margin-bottom: 0px">Employer:
-                <ul class="govuk-list govuk-list--bullet">
-                    <li style="margin-bottom: 0px">Choose course page: yes/no choice</li>
-                    <li style="margin-bottom: 0px">Choose org page: skip page if 1</li>
-                    <li style="margin-bottom: 0px">Dropout - dont know course page: new page</li>
-                    <li style="margin-bottom: 0px">Hiding org column if 1 org  <a href="https://trello.com/c/l2losURX" target="_blank" class="govuk-link govuk-link--no-visited-state">card #152</a></li>
-                    <li style="margin-bottom: 0px">Manage page: table layout, ordering</li>
-                </ul>
-              </li>
-            </ul>
-          </li>
+          <li style="margin-bottom: 0px">Manage page (provider): search, pagination and filters <a href="https://trello.com/c/9dnOLy9f" target="_blank" class="govuk-link govuk-link--no-visited-state">card #148</a></li> 
+          <li style="margin-bottom: 0px">Manage page (provider): table layout, ordering, misc content changes (incl. 0 reservations view)</li>
+          <li style="margin-bottom: 0px">Choose course page: yes/no choice</li>
+          <li style="margin-bottom: 0px">Choose org page: skip page if 1</li>
+          <li style="margin-bottom: 0px">Dropout - dont know course page: new page</li>
+          <li style="margin-bottom: 0px">Hiding org column if 1 org  <a href="https://trello.com/c/l2losURX" target="_blank" class="govuk-link govuk-link--no-visited-state">card #152</a></li>
+          <li style="margin-bottom: 0px">Manage page (employer): table layout, ordering</li>
         </ul>
       </li>
       <li style="margin-bottom:20px"><a href="/14-0/setup" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">Version 14</a> (MVS - September 2019)</li>
