--- a/app/views/16-0/reserve-confirm-provider-b.html
+++ b/app/views/16-0/reserve-confirm-provider-b.html
@@ -20,26 +20,27 @@
     <div class="govuk-grid-column-two-thirds">
 
         <h1 class="govuk-heading-xl" >
-            [Confirm the training provider that you want to add to this reservation]
+            Confirm the training provider you want to assign to this reservation
         </h1>
 
-        <p class="govuk-body"><span class="govuk-!-font-weight-bold">[Traning provider UKPRN</span><br>{{myData.selectedProvider.id}}]</p>
-        <p class="govuk-body"><span class="govuk-!-font-weight-bold">[Traning provider name</span><br>{{myData.selectedProvider.name}}]</p>
-
+        <div class="govuk-form-group">
+          <p class="govuk-body">{{myData.selectedProvider.name}}<br>{{myData.selectedProvider.id}}</p>
+        </div>
+        
         <!-- Change link -->
         {% set _changeLink = "reserve-choose-provider-3-b" %}
         {% if myData.existingproviders == 0 %}
             {% set _changeLink = "reserve-enter-provider" %}
         {% endif %}
 
-        <p class="govuk-body">[If this is not the right training provider, <a href="{{_changeLink}}" class="govuk-link govuk-link--no-visited-state">try a different UKPRN</a>]</p>
+        <p class="govuk-body">If this is not the right training provider, <a href="{{_changeLink}}" class="govuk-link govuk-link--no-visited-state">try a different UKPRN</a></p>
         
         <form method="POST">
           <div class="govuk-form-group">
             <!-- Button -->
             {% from "govuk/components/button/macro.njk" import govukButton %}
             {{ govukButton({
-                text: "[Confirm and continue]"
+                text: "Confirm and continue"
             }) }}
           </div>
         </form>
