--- a/app/views/16-0/reserve-confirmation.html
+++ b/app/views/16-0/reserve-confirmation.html
@@ -93,14 +93,14 @@
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                    [Provider]
+                    Training provider
                 </dt>
                 <dd class="govuk-summary-list__value">
                     {% if myData.addProvider == true %}
                         {{myData.selectedProvider.name}}<br>
                         {{myData.selectedProvider.id}}
                     {% else %}
-                        [Not added]
+                        No training provider assigned
                     {% endif %}
                 </dd>
             </div>
