16-0 success panel colour updated

--- a/app/views/16-0/reserve-added-provider-confirmation.html
+++ b/app/views/16-0/reserve-added-provider-confirmation.html
@@ -20,7 +20,7 @@
     <div class="govuk-grid-column-two-thirds">
 
         <!-- Panel -->
-        <div class="govuk-panel govuk-panel--confirmation govuk-!-margin-bottom-8" style="background-color:#28a197">
+        <div class="govuk-panel govuk-panel--confirmation govuk-!-margin-bottom-8" >
             <h1 class="govuk-panel__title">
                 Training provider successfully added
             </h1>
