--- a/app/views/16-0/reserve-delete-confirmation.html
+++ b/app/views/16-0/reserve-delete-confirmation.html
@@ -40,7 +40,7 @@
         {% endif %}
 
         <!-- Panel -->
-        <div class="govuk-panel govuk-panel--confirmation govuk-!-margin-bottom-8" style="background-color:#28a197">
+        <div class="govuk-panel govuk-panel--confirmation govuk-!-margin-bottom-8" >
             <h1 class="govuk-panel__title">
                 Reservation successfully deleted
             </h1>
