--- a/app/views/16-0/reserve-confirmation.html
+++ b/app/views/16-0/reserve-confirmation.html
@@ -35,7 +35,7 @@
         {% endif %}
 
         <!-- Panel -->
-        <div class="govuk-panel govuk-panel--confirmation" style="background-color:#28a197">
+        <div class="govuk-panel govuk-panel--confirmation" >
             <h1 class="govuk-panel__title">
                 You have successfully reserved funding for apprenticeship training
             </h1>
