16-0 upcoming date 2 months away

--- a/app/views/16-0/reserve-upcoming.html
+++ b/app/views/16-0/reserve-upcoming.html
@@ -27,9 +27,9 @@
                 </h2>
             </header>
         
-            <p>Government funding for apprenticeship training will be paused on 31 October 2019. You must reserve funding for your training before this date.</p>
+            <p>Government funding for apprenticeship training will be paused on {{myData.EndOfTwoMonthsFromNowDateFriendly}}. You must reserve funding for your training before this date.</p>
         
-            <p>This change will not affect funding reserved before 31 October 2019</p>
+            <p>This change will not affect funding reserved before {{myData.EndOfTwoMonthsFromNowDateFriendly}}</p>
 
             <form method="POST">
                 <p>
