--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,14 +13,16 @@ Reserve funding prototype
     </h1>
 
     <ul class="govuk-list govuk-list--bullet govuk-body-l">
-      <li style="margin-bottom:20px"><a href="/16-0/setup" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">Version 16</a>
+      <li style="margin-bottom:20px"><a href="/16-0/setup" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">Version 16</a> (in progress)
         <ul class="govuk-list govuk-list--bullet">
           <li style="margin-bottom: 0px">Hiding org rows if 1 org  <a href="https://trello.com/c/l2losURX" target="_blank" class="govuk-link govuk-link--no-visited-state">card #152</a></li>
           <li style="margin-bottom: 0px">Start date: I don't know option incl. dropout <a href="https://trello.com/c/7brJTKdL" target="_blank" class="govuk-link govuk-link--no-visited-state">card #144</a></li>
           <li style="margin-bottom: 0px">Assign provider to reservation <a href="https://trello.com/c/2olNeEjU" target="_blank" class="govuk-link govuk-link--no-visited-state">card #149</a> <span class="govuk-!-font-weight-bold" style="color:rgb(255, 111, 0)">(in progress)</span> </li>
+          <li style="margin-bottom: 0px">Upcoming date always 2 months away <a href="https://trello.com/c/5bLqz2ut" target="_blank" class="govuk-link govuk-link--no-visited-state">card #13</a> </li>
+          <li style="margin-bottom: 0px">Search for employer <a href="https://trello.com/c/KKKH7aNg" target="_blank" class="govuk-link govuk-link--no-visited-state">card #71</a> <span class="govuk-!-font-weight-bold" style="color:rgb(255, 111, 0)">(in progress)</span> </li>
         </ul>
       </li>
-      <li style="margin-bottom:20px"><a href="/15-0/setup" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">Version 15</a>
+      <li style="margin-bottom:20px"><a href="/15-0/setup" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">Version 15</a>: Tested: XXX 2019
         <ul class="govuk-list govuk-list--bullet">
           <li style="margin-bottom: 0px">Manage page (provider): search, pagination and filters <a href="https://trello.com/c/9dnOLy9f" target="_blank" class="govuk-link govuk-link--no-visited-state">card #148</a></li> 
           <li style="margin-bottom: 0px">Manage page (provider): table layout, ordering, misc content changes (incl. 0 reservations view)</li>
