16-0 bug fix. manage content updated.

--- a/app/views/16-0/reserve-confirm-provider.html
+++ b/app/views/16-0/reserve-confirm-provider.html
@@ -42,7 +42,7 @@
           {% set _confirmLink = "reserve-confirmation-provider-added" %}
         {% endif %}
 
-        <p class="govuk-body">If this is not the right training provider, <a href="{{_changeLink}}" class="govuk-link govuk-link--no-visited-state">try a different UKPRN</a></p>
+        <p class="govuk-body">If this is not the right training provider, <a href="{{_changeLink}}" class="govuk-link govuk-link--no-visited-state">try a different UKPRN</a>.</p>
 
         <!-- Button -->
         {% from "govuk/components/button/macro.njk" import govukButton %}
