--- a/app/views/16-0/reserve-reservations.html
+++ b/app/views/16-0/reserve-reservations.html
@@ -64,9 +64,9 @@
                   {% if _account.entities.length > 1 %}
                   <th scope="col" class="govuk-table__header">Organisation</th>
                   {% endif %}
-                  <th scope="col" class="govuk-table__header">Apprenticeship training</th>
+                  <th scope="col" class="govuk-table__header">Apprenticeship training course</th>
                   <th scope="col" class="govuk-table__header">Apprenticeship start date</th>
-                  <th scope="col" class="govuk-table__header">[Provider]</th>
+                  <th scope="col" class="govuk-table__header">Training provider</th>
                   <th scope="col" class="govuk-table__header"></th>
                 </tr>
               </thead>
