16-0 non eoi page for employers

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -20,6 +20,7 @@ Reserve funding prototype
           <li style="margin-bottom: 0px">Assign provider to reservation <a href="https://trello.com/c/2olNeEjU" target="_blank" class="govuk-link govuk-link--no-visited-state">card #149</a> <span class="govuk-!-font-weight-bold" style="color:rgb(255, 111, 0)">(in progress)</span> </li>
           <li style="margin-bottom: 0px">Upcoming date always 2 months away <a href="https://trello.com/c/5bLqz2ut" target="_blank" class="govuk-link govuk-link--no-visited-state">card #13</a> </li>
           <li style="margin-bottom: 0px">Search for employer <a href="https://trello.com/c/KKKH7aNg" target="_blank" class="govuk-link govuk-link--no-visited-state">card #71</a> <span class="govuk-!-font-weight-bold" style="color:rgb(255, 111, 0)">(in progress)</span> </li>
+          <li style="margin-bottom: 0px">Employer non EOI page <a href="https://trello.com/c/sJdu2BOE" target="_blank" class="govuk-link govuk-link--no-visited-state">card #153</a> </li>
         </ul>
       </li>
       <li style="margin-bottom:20px"><a href="/15-0/setup" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">Version 15</a>: Tested: XXX 2019
