--- a/app/views/16-0/reserve-non-eoi.html
+++ b/app/views/16-0/reserve-non-eoi.html
@@ -23,11 +23,15 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
+      {% if myData.type == "pro" %}
         <h1 class="govuk-heading-xl">Sorry, this functionality is unavailable</h1>
-
         <p class="govuk-body">You will be able to reserve apprenticeship funding at a later date.</p>
-        
         <a href="{{_homepageURL}}" role="button" tabindex="1" draggable="false" class="govuk-button">Return to homepage</a>
+      {% else %}
+        <h1 class="govuk-heading-xl">Funding reservations coming soon</h1>
+        <p class="govuk-body">You will be able to reserve funding at a later date.</p>
+        <a href="{{_homepageURL}}" role="button" tabindex="1" draggable="false" class="govuk-button">Return to homepage</a>
+      {% endif %}
 
     </div>
 </div>
